- Handle HTTP response headers case insensitively. Fix for bug 110768.

BUG: 110768

svn path=/branches/KDE/3.5/kdelibs/; revision=470753